Fix page bleeding, and change the way the scrolling works accordingly

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -3,8 +3,8 @@
 @import "xterm.css";
 
 body {
-    width: 100vw;
-    height: 100vh;
+    /*width: 100%;
+    height: 100%;*/
     margin: 0;
     position: relative;
 }
@@ -334,6 +334,7 @@ body {
 
 #list > article > a > .info {
     position: relative;
+    width: 100%;
 }
 
 #list > article > a > .info > h5 > a {
